--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,44 +1,76 @@
 <div class="artistes">
-	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="../images/landing-1.jpg" alt="...">
-      <div class="carousel-caption">
-        <h3>HELLO WORLD</h3>
-    	<p>hello world</p>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="../images/landing-1.jpg" alt="...">
+        <div class="carousel-caption">
+          <h3>HELLO WORLD</h3>
+          <p>hello world</p>
+        </div>
+      </div>
+      <div class="item">
+        <img src="../images/landing-2.jpg" alt="...">
+        <div class="carousel-caption">
+          <h3>HELLO WORLD</h3>
+          <p>hello world</p>
+        </div>
+      </div>
+      <div class="item">
+        <img src="../images/landing-3.jpg" alt="...">
+        <div class="carousel-caption">
+          <h3>HELLO WORLD</h3>
+          <p>hello world</p>
+        </div>
       </div>
     </div>
-    <div class="item">
-      <img src="../images/landing-2.jpg" alt="...">
-      <div class="carousel-caption">
-        <h3>HELLO WORLD</h3>
-    	<p>hello world</p>
-      </div>
-    </div>
-	<div class="item">
-      <img src="../images/landing-3.jpg" alt="...">
-      <div class="carousel-caption">
-        <h3>HELLO WORLD</h3>
-    	<p>hello world</p>
-      </div>
-    </div>
-  </div>
 
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+  </div>
+
+</div>
+<div class="mid-text">
+  <div class="jumbotron">
+    <h1>Gajimare Soaps</h1>
+    <p>We believe in using traditional techniques in the creation of our 100% natural products. We source our unrefined Shea
+      butter from Nigeria, our Cocoa Butter from Ghana, our Cold pressed Coconut oil from the coasts of Kenya and Sao Tome.
+      Our essential oils are also sourced from the continent : Ylang Ylnag from Madagascar, Argan from Morrocco, Moringa,
+      Lavendar, Rose Oil, Leleshwa Oil and Qasil from Kenya. </p>
+    <p>We ensure that all our scents are essential oil scents and NOT fragrance oils. Essential oils are luxurious additions.
+      Fragrance oils are much cheaper and can be extremely toxic.</p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+  </div>
+</div>
+<div mid-image>
+  <img src="../images/landing.jpg" alt="">
+</div>
+
+<div class="products-section">
+  <div ng-controller="" ng-init="">
+    <div class="container">
+      <div class="row">
+        <!--ng repeat to cycle over the data in the API-->
+        <div class="back-opacity">
+          <div class="animated fadeInUp card col-sm-4">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
