--- a/client/css/style.css
+++ b/client/css/style.css
@@ -14,74 +14,17 @@ body{
 }
 
 
-.navbar-brand{
-  color: #FFFFFF !important;
-  font-weight: bold;
-}
-
-.navbar-nav a{
-  color: #FFFFFF !important;
-}
-
-.navbar-transparent{
-  background:transparent !important;
-  background-image:none !important;
-  border-color:transparent !important;
-  box-shadow:none !important;
-}
-
-.navscroll{
-  background: #111517;
-}
-
 #container{
   width: auto !important;
   margin: auto !important;
   padding: auto !important;
 }
 
-
-.the-line{
-  padding: 50px;
+.mid-text{
+  text-align: center !important;
 }
 
-hr{
-  border-color: #CCCCCC !important;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-footer{
-  font-size: 12px;
-  padding: 50px;
-}
-
-footer .footer-text{
-  text-align: center;
-  font-weight: bold;
-}
-
-footer .second-p{
-  color: #999999;
-}
-
-
-/*
-  ========================================
-  MEDIA QUERIES
-  ========================================
-*/
-
-@media only screen and (max-width: 1200px) {
-  .card {
-    height: inherit;
-    }
-}
-
-@media only screen and (max-width: 620px){
-    .search-box{
-      width: auto !important;
-      margin: -10px !important;
-      overflow: none !important;
-    }
+.mid-image img{
+  margin: auto !important;
+  padding: auto !important;
 }
