--- a/client/views/home.html
+++ b/client/views/home.html
@@ -64,13 +64,25 @@
   <div ng-controller="" ng-init="">
     <div class="container">
       <div class="row">
-        <!--ng repeat to cycle over the data in the API-->
+        <!--ng repeat to cycle over the data-->
         <div class="back-opacity">
-          <div class="animated fadeInUp card col-sm-4">
+          <div class="animated fadeInUp card col-sm-3">
+              <img src="../images/item.jpg" alt="">
+              <div class="card-text">
+                <p class="card-title">Body Butter Lotion</p>
+                <p class="category">Body Butters</p>
+                <p>Kes. 25</p>
 
+                
+                  <a class="view-item" href="">VIEW</a>
+                  <a class="cart" href="">ADD TO CART</a>
+                
+              </div>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<!--#603813-->
