--- a/client/css/style.css
+++ b/client/css/style.css
@@ -22,9 +22,57 @@ body{
 
 .mid-text{
   text-align: center !important;
+  margin: auto !important;
+  padding: auto !important;
 }
 
 .mid-image img{
-  margin: auto !important;
-  padding: auto !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+
+.products-section{
+  background-color: #F2F2F2;
+  padding: 50px 0 50px 0; 
+}
+
+.products-section .card{
+  margin: 0 !important;
+  padding: 0 !important;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.card img{
+  width: 100%;
+}
+
+.card .card-text{
+  background-color: #FFFFFF;
+  padding: 20px 10px;
+}
+
+.card .category{
+  color: #A6A6A6;
+}
+
+.card .card-title{
+  margin: 0 !important;
+  padding: 0 !important; 
+}
+
+.card .view-item{
+  margin-right: 20px;
+}
+
+
+footer{
+  background-color: #444444;
+  color: #FFFFFF;
+  padding: 100px 20px;
+  text-align: center;
+}
+
+.footer-logo{
+  width: 50px;
 }
