--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,78 +1,77 @@
-body{
-  background-color: #F2F2F2 !important;
+body {
   font-family: 'Averta', sans-serif !important;
-  margin: 0 ;
-  padding: 0 ;
+  margin: 0;
+  padding: 0;
 }
-
 
 @font-face {
   font-family: "Averta";
   font-style: normal;
   font-weight: 500;
-	src: url(../fonts/averta-regular-webfont.woff);
+  src: url(../fonts/averta-regular-webfont.woff);
 }
 
-
-#container{
+#container {
   width: auto !important;
   margin: auto !important;
   padding: auto !important;
 }
 
-.mid-text{
+.jumbotron {
+  background-color: #FFFFFF !important;
+}
+
+.mid-text {
   text-align: center !important;
   margin: auto !important;
   padding: auto !important;
 }
 
-.mid-image img{
+.mid-image img {
   margin: 0 !important;
   padding: 0 !important;
 }
 
-
-.products-section{
+.products-section {
   background-color: #F2F2F2;
-  padding: 50px 0 50px 0; 
+  padding: 50px 0 50px 0;
 }
 
-.products-section .card{
+.products-section .card {
   margin: 0 !important;
   padding: 0 !important;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-.card img{
+.card img {
   width: 100%;
 }
 
-.card .card-text{
+.card .card-text {
   background-color: #FFFFFF;
   padding: 20px 10px;
 }
 
-.card .category{
+.card .category {
   color: #A6A6A6;
 }
 
-.card .card-title{
+.card .card-title {
   margin: 0 !important;
-  padding: 0 !important; 
+  padding: 0 !important;
 }
 
-.card .view-item{
+.card .view-item {
   margin-right: 20px;
 }
 
-
-footer{
+footer {
   background-color: #444444;
   color: #FFFFFF;
   padding: 100px 20px;
   text-align: center;
 }
 
-.footer-logo{
+.footer-logo {
   width: 50px;
 }
