updated client side

--- a/client/views/home.html
+++ b/client/views/home.html
@@ -5,7 +5,6 @@
       <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
       <li data-target="#carousel-example-generic" data-slide-to="1"></li>
       <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
     </ol>
 
     <!-- Wrapper for slides -->
@@ -54,13 +53,11 @@
 
 <div class="mid-text">
   <div class="jumbotron">
-    <h1>Gajimare Soaps</h1>
-    <p>We believe in using traditional techniques in the creation of our 100% natural products. We source our unrefined Shea
-      butter from Nigeria, our Cocoa Butter from Ghana, our Cold pressed Coconut oil from the coasts of Kenya and Sao Tome.
-      Our essential oils are also sourced from the continent : Ylang Ylnag from Madagascar, Argan from Morrocco, Moringa,
-      Lavendar, Rose Oil, Leleshwa Oil and Qasil from Kenya. </p>
-    <p>We ensure that all our scents are essential oil scents and NOT fragrance oils. Essential oils are luxurious additions.
-      Fragrance oils are much cheaper and can be extremely toxic.</p>
+    <h1>Body Butters and Oils</h1>
+    <p class="mid-text-fade">Inspiring African Luxury</p>
+    <hr>
+    <p>We source the finest quality unrefined Shea, Coconut, Argan and oils from within the continent. You can follow the journey of each batch of our products from the factory by scanning the code on your packaging. Our Shea comes from Nigeria, Argan from Morocco and our cold pressed coconut oil from Kenya and Sao Tome. </p>
+    
     <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
   </div>
 </div>
@@ -68,26 +65,26 @@
   <img src="../images/landing.jpg" alt="">
 </div>
 
-<div class="products-section">
+<div class="collections-section">
+  <div class="title">
+    <p>EXPLORE THE COLLECTION</p>
+  </div>
+
   <div ng-controller="" ng-init="">
     <div class="container">
       <div class="row">
         <!--ng repeat to cycle over the data-->
         <div class="back-opacity">
-          <div class="animated fadeInUp card col-sm-3">
-              <img src="../images/item.jpg" alt="">
-              <div class="card-text">
-                <p class="card-title">Body Butter Lotion</p>
-                <p class="category">Body Butters</p>
-                <p>Kes. 25</p>
-
-                
-                  <a class="view-item" href="">VIEW</a>
-                  <a class="cart" href="">ADD TO CART</a>
-                
+          <div class="animated fadeInUp card col-sm-4">
+            <div class="collection-img text-center">
+              <a href="">
+              <img src="../images/item.jpg" alt="" class="img-responsive">
+              <div class="caption">
+                <p>BODY BUTTERS</p>
               </div>
+              </a>
+            </div>
           </div>
-        </div>
       </div>
     </div>
   </div>
