--- a/client/css/style.css
+++ b/client/css/style.css
@@ -17,6 +17,12 @@ body {
   padding: auto !important;
 }
 
+.carousel-caption {
+    top: 0;
+    bottom: auto;
+    padding-top: 300px !important;
+}
+
 .jumbotron {
   background-color: #FFFFFF !important;
 }
@@ -27,13 +33,38 @@ body {
   padding: auto !important;
 }
 
+.mid-text h1{
+  font-size: 30px !important;
+}
+
+.mid-text-fade{
+  color: #A6A6A6;
+  text-align: center;
+}
+
+.mid-text hr{
+  width: 20%;
+  border-color: #444444 !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mid-text p{
+  padding: 0 200px;
+}
+
 .mid-image img {
   margin: 0 !important;
   padding: 0 !important;
 }
 
+.collections-section{
+  padding: 50px 0 50px 0;
+}
+
+
+/*PRODUCTS SECTION*/
 .products-section {
-  background-color: #F2F2F2;
   padding: 50px 0 50px 0;
 }
 
@@ -41,6 +72,12 @@ body {
   margin: 0 !important;
   padding: 0 !important;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.title p{
+  text-align: center;
+  font-size: 30px;
+  font-weight: 600px;
 }
 
 .card img {
@@ -65,6 +102,39 @@ body {
   margin-right: 20px;
 }
 
+.collection-img {
+  background-color: rgba(0,0,0, 0.5);
+  zoom: 1;
+  position: relative;
+}
+
+.caption {
+    position: absolute;
+    font-size: 20px;
+    font-weight: 600px;
+    top: 45%;
+    left: 0;
+    width: 100%;
+}
+
+.caption p{
+  color: #FFFFFF;
+}
+
+.caption p:hover{
+  color: #FFFFFF;
+}
+
+.caption p:active{
+  color: #FFFFFF;
+}
+
+.caption p:after{
+  color: #FFFFFF;
+}
+
+
+/*FOOTER*/
 footer {
   background-color: #444444;
   color: #FFFFFF;
@@ -74,4 +144,11 @@ footer {
 
 .footer-logo {
   width: 50px;
+}
+
+
+@media only screen and (max-width: 1120px){
+  .mid-text p{
+    padding: inherit !important;
+  }
 }
