--- a/client/views/home.html
+++ b/client/views/home.html
@@ -65,22 +65,31 @@
   <img src="../images/landing.jpg" alt="">
 </div>
 
-<div class="collections-section">
-  <div class="title">
-    <p>EXPLORE THE COLLECTION</p>
-  </div>
-
-  <div ng-controller="" ng-init="">
-    <div class="container">
+<!--FOOTER PRODUCTS-->
+<div class="footer-products">
+     <div class="container">
       <div class="row">
-        <!--ng repeat to cycle over the data-->
+        <p class="padding: 0 !important; margin: 0 !important;">EXPLORE THE COLLECTION</p>
         <div class="back-opacity">
-          <div class="animated fadeInUp card col-sm-4">
-            <div class="collection-img text-center">
+          <div class="animated fadeInUp card col-md-6">
+            <div class="footer-products-img text-center">
               <a href="">
-              <img src="../images/item.jpg" alt="" class="img-responsive">
+              <img src="../images/item1.jpg" alt="" >
               <div class="caption">
                 <p>BODY BUTTERS</p>
+              </div>
+              </a>
+            </div>
+          </div>
+      </div>
+
+       <div class="back-opacity">
+          <div class="animated fadeInUp card col-md-6">
+            <div class="collection-img text-center">
+              <a href="">
+              <img src="../images/item2.jpg" alt="" >
+              <div class="caption">
+                <p>BODY OILS</p>
               </div>
               </a>
             </div>
@@ -90,4 +99,61 @@
   </div>
 </div>
 
+<div class="footer-nav">
+  <div class="container">
+      <div class="row">
+        <div class="back-opacity">
+          <div class="animated fadeInUp card col-sm-3">
+            <div class="collection-img text-center">
+              <a href="">
+              <img src="../images/item-1.jpg" alt="" >
+              <div class="caption">
+                <p>ABOUT</p>
+              </div>
+              </a>
+            </div>
+          </div>
+      </div>
+
+       <div class="back-opacity">
+          <div class="animated fadeInUp card col-sm-3">
+            <div class="collection-img text-center">
+              <a href="">
+              <img src="../images/item-2.jpg" alt="" >
+              <div class="caption">
+                <p>SHOP</p>
+              </div>
+              </a>
+            </div>
+          </div>
+      </div>
+
+      <div class="back-opacity">
+          <div class="animated fadeInUp card col-sm-3">
+            <div class="collection-img text-center">
+              <a href="">
+              <img src="../images/item-3.jpg" alt="" >
+              <div class="caption">
+                <p>HOTEL COLLECTIONS</p>
+              </div>
+              </a>
+            </div>
+          </div>
+      </div>
+
+      <div class="back-opacity">
+          <div class="animated fadeInUp card col-sm-3">
+            <div class="collection-img text-center">
+              <a href="">
+              <img src="../images/item-1.jpg" alt="" >
+              <div class="caption">
+                <p>CONTACTS</p>
+              </div>
+              </a>
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
 <!--#603813-->
