--- a/client/views/bodybutters.html
+++ b/client/views/bodybutters.html
@@ -5,7 +5,7 @@
         <!--ng repeat to cycle over the data-->
         <div class="back-opacity">
           <div class="animated fadeInUp card col-sm-3">
-              <img src="../images/item.jpg" alt="">
+              <img src="../images/item-1.jpg" alt="">
               <div class="card-text">
                 <p class="card-title">Body Butter Lotion</p>
                 <p class="category">Body Butters</p>
